<resources>
    <string name="app_name">Carrier Select</string>
    <string name="action_settings">Settings</string>
    <string name="sphone_message"></string>
    <string name="bphone_message" />
    <string name="data_message" />
    <string name="button_send">Next ></string>
    <string name="sphone_label">Number of smartphones? </string>
    <string name="data_label">How many GB of data? </string>
    <string name="bphone_label">Number of basic phones? </string>
    <string name="extras_label">Extras</string>
    <string name="sphone_input" />
    <string name="bphone_input" />
    <string name="data_input" />
    <string name="total_message">Quote Again</string>
    <string name="edit_message" />
    <string name="back_button">Quote Again</string>
    <string name="ver_pretotal">Verizon Monthly Cost</string>
    <string name="att_pretotal">AT&amp;T Monthly Cost</string>
    <string name="spr_pretotal">Sprint Monthly Cost</string>
    <string name="tmo_pretotal">T-Mobile Monthly Cost</string>
    <string name="serviceplans">Service Plans</string>
    <string name="sp1title">Build Your Plan</string>
    <string name="sp2title">Service Plan Quotes</string>
    <string name="sp3title">Breakdown of Costs</string>
    <string name="ver_total">Loading Total&#8230;</string>
    <string name="att_total">Loading Total&#8230;</string>
    <string name="spr_total">Loading Total&#8230;</string>
    <string name="tmo_total">Loading Total&#8230;</string>
    <string name="pvtype">Plan Type</string>
    <string name="plandevices">Plan Supports</string>
    <string name="pvtalktext">Talk and Text Amount</string>
    <string name="pvdata">Shared Data Limit</string>
    <string name="pvdatathrottle">High Speed Internet until</string>
    <string name="pvoverages">Data Overage Costs</string>
    <string name="pvetf">Early Termination Fee \n (Contracts)</string>
    <string name="pvetfinstall">Early Termination Fee \n (Phone Installments)</string>
    <string name="logo_string">Carrier Select</string>
    <string name="checkbox_hotspot">Mobile Broadband?</string>
    <string name="breakdown_send">Next</string>
    <string name="att_breakdown_message">AT&amp;T Breakdown</string>
    <string name="ver_breakdown_message">Verizon Breakdown</string>
    <string name="spr_breakdown_message">Sprint Breakdown</string>
    <string name="tmo_breakdown_message">T-Mobile Breakdown</string>
    <string name="att_breakdowntitle">AT&amp;T Breakdown</string>
    <string name="ver_breakdowntitle">Verizon Breakdown</string>
    <string name="spr_breakdowntitle">Sprint Breakdown</string>
    <string name="tmo_breakdowntitle">T-Mobile Breakdown</string>
    <string name="logo_desc">Carrier Select Logo</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">close</string>
    <string-array name="menu_list">
        <item>News</item>
        <item>My Profile</item>
        <item>PlanBuilder</item>
        <item>Service Plans</item>
        <item>No Contract Plans</item>
        <item>Phone Search</item>
        <item>Knowledge Base</item>
        <item>Settings</item>
        <item>About</item>
    </string-array>
    <string name="sphone_p">+</string>
    <string name="sphone_m">-</string>
    <string name="sstarter">0</string>
    <string name="contract_plans">Contract Plan Quotes</string>
    <string name="bstarter">0</string>
    <string name="dstarter">0</string>
    <string name="bphone_p">+</string>
    <string name="bphone_m">-</string>
    <string name="data_p">+</string>
    <string name="data_m">-</string>
    <string name="discount_text">Bill discount (employer, etc)?</string>
    <string name="dis_value">0%</string>
    <string name="plancost">Core Plan Cost:</string>
    <string name="smartcost">Line Access - Smart:</string>
    <string name="basiccost">Line Access - Basic:</string>
    <string name="phonecost">Line Access - Devices:</string>
    <string name="datacost">Cost of Data:</string>
    <string name="tabletcost">Line Access - Tablets:</string>
    <string name="hotspotcost">Line Access - Hotspots:</string>
    <string name="taxescost">Taxes &amp; Charges:</string>
    <string name="discountcost">Employer Discount:</string>
    <string name="total">Total:</string>
    <string name="viewplan">View This Plan</string>
    <string name="pvtitle">Service Plan Viewer</string>
    <string name="pvsubtitle"></string>
    <string name="title_activity_start_screen">StartScreen</string>
    <string name="welcome">Welcome to Carrier Select</string>
    <string name="welcomeback">Welcome back.</string>
    <string name="homenews">News</string>
    <string name="homesubtitle">News &amp; Updates on Everything Mobile</string>
    <string name="newsupdatetitle">Current Plan Promotions</string>
    <string name="planupdatetitle">Plan Search Updates</string>
    <string name="phoneupdatetitle">Phone Search Updates</string>
    <string name="kbupdatetitle">Knowledge Base Updates</string>
    <string name="newstest">Loading Updates&#8230;</string>
    <string name="next1">Next &gt;</string>
    <string name="viewbreakdown">View Breakdown</string>
    <string name="tellus">First, tell us a little about yourself.</string>
    <string name="next2">Next &gt;</string>
    <string name="next3">Next &gt;</string>
    <string name="next4">Next &gt;</string>
    <string name="profile">What kind of user are you/your family?</string>
    <string name="light">Light</string>
    <string name="moderate">Moderate</string>
    <string name="heavy">Heavy</string>
    <string name="lightdesc">Phones are used lightly, little to no data or texting.</string>
    <string name="moderatedesc">I\'m an average user or family. Texting is a must, and I use average amounts of data.</string>
    <string name="heavydesc">I need the best of the best. I chew through everything.</string>
    <string name="title_activity_monthly">Monthly</string>
    <string name="dollarQ">What is your total cellphone bill monthly?</string>
    <string name="monthly" />
    <string name="less70">$0-$70</string>
    <string name="less125">$71-$125</string>
    <string name="less150">$126-$150</string>
    <string name="less175">$151-$175</string>
    <string name="less200">$176-$200</string>
    <string name="less225">$201-$225</string>
    <string name="less250">$226-$250</string>
    <string name="plus250">$250+</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_plan_builder">PlanBuilder</string>
    <string name="planbuilder1">Using PlanBuilder, you can create your own wireless plan and see which carriers fit your needs.</string>
    <string name="home">Home</string>
    <string name="pb">PlanBuilder</string>
    <string name="contract">Contract Plans</string>
    <string name="nocontract">No Contract Plans</string>
    <string name="about">About</string>
    <string name="pbicon">PlanBuilder</string>
    <string name="next">Next</string>
    <string name="minstarter">0</string>
    <string name="min_label">How many minutes would you use?</string>
    <string name="text_label">How many texts would you use?</string>
    <string name="gig_label">How many gigs of data would you use?</string>
    <string name="tab_label">How many tablets?</string>
    <string name="includecarrier">Factor in current carrier</string>
    <string name="search">Phone Search</string>
    <string name="pssubtitle">Enter a phone to see technical specs</string>
    <string name="searchTermHint">(ex. LG Optimus G Pro)</string>
    <string name="searchGoBox">Search for Phone</string>
    <string name="yourProfile">My Profile</string>
    <string name="yourcarrier">Not Set</string>
    <string name="numsmartphones">Not Set</string>
    <string name="numbasicphones">Not Set</string>
    <string name="gigsofdata">Not Set</string>
    <string name="numtablets">Not Set</string>
    <string name="monthlypayment">Not Set</string>
    <string name="profilecarrier">My Carrier:</string>
    <string name="profilesmart">My Smartphones:</string>
    <string name="profilebasic">My Basic phones:</string>
    <string name="profilegigs">My Data Plan:</string>
    <string name="profiletablets">My Tablets:</string>
    <string name="profilemonthly">My Monthly bill:</string>
    <string name="editprofile">Edit My Profile</string>
    <string name="homesave">Save My Profile</string>
    <string name="editplan">Edit PlanBuilder Selections</string>
    <string name="pb2title">Would you like a smart phone or a basic phone?</string>
    <string name="pb3title">Around how many minutes do you need?</string>
    <string name="pb4title">How about texting?</string>
    <string name="pb5title">Okay, so you want a smartphone. How much data do you need?</string>
    <string name="pb6title">Is it okay if your internet slows down after heavy usage or do you need max speed at all times?</string>
    <string name="pb7title2">PlanBuilder Summary</string>
    <string name="pb71">Smart</string>
    <string name="pb72">Unlimited</string>
    <string name="pb73">Unlimited</string>
    <string name="pb74">Unlimited</string>
    <string name="pb75">Yes</string>
    <string name="pb7find">Search For My Plan</string>
    <string name="planphone">Phones Supported:</string>
    <string name="planmins">Minutes Included:</string>
    <string name="plantext">Texting Included:</string>
    <string name="plandata">Data Included:</string>
    <string name="planthrottle">Slows Data:</string>
    <string name="network">Network Type:</string>
    <string name="phonetype">Phone:</string>
    <string name="minutes">Minutes:</string>
    <string name="texts">Texts:</string>
    <string name="data">Data:</string>
    <string name="throttle">Throttle:</string>
    <string name="zero">None</string>
    <string name="one">One</string>
    <string name="two">Two</string>
    <string name="three">Three</string>
    <string name="four">Four</string>
    <string name="five">Five</string>
    <string name="six">Six</string>
    <string name="seven">Seven</string>
    <string name="eight">Eight</string>
    <string name="nine">Nine</string>
    <string name="ten">Ten</string>
    <string name="oneword">One</string>
    <string name="twoword">Two</string>
    <string name="threeword">Three</string>
    <string name="fourword">Four</string>
    <string name="fiveword">Five</string>
    <string name="sixword">Six</string>
    <string name="sevenword">Seven</string>
    <string name="eightword">Eight</string>
    <string name="nineword">Nine</string>
    <string name="tenword">Ten</string>
    <string name="nosmart">No Smartphones</string>
    <string name="nobasic">No Basicphones</string>
    <string name="nodata">No Data</string>
    <string name="att">AT&amp;T</string>
    <string name="sprint">Sprint</string>
    <string name="tmobile">T-Mobile</string>
    <string name="verizon">Verizon</string>
    <string name="other">Other</string>
    <string name="onegig">1GB</string>
    <string name="twogig">2GB</string>
    <string name="threegig">3GB</string>
    <string name="fourgig">4GB</string>
    <string name="fivegig">5GB</string>
    <string name="sixgig">6GB</string>
    <string name="sevengig">7GB</string>
    <string name="eightgig">8GB</string>
    <string name="ninegig">9GB</string>
    <string name="tengig">10GB</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="carriertitle">Which carrier do you currently reside on?</string>
    <string name="smartphonestitle">How many smartphones do you have?</string>
    <string name="basicphonestitle">How many basic phones do you have?</string>
    <string name="datatitle">How much data do you have/use between all phones?</string>
    <string name="monthlytitle">How much do you pay on average per month for your mobile service?</string>
    <string name="nodatadesc">I don\'t need any internet access.</string>
</resources>