<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/carriertitle"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/titlespace"
        android:layout_gravity="center"
        android:layout_margin="@dimen/border"
        android:gravity="center"
        android:text="@string/carriertitle"
        android:textSize="@dimen/title_dimens" />

    <Button
        android:id="@+id/att"
        android:layout_width="@dimen/resultw"
        android:layout_height="@dimen/resulth"
        android:layout_gravity="center"
        android:layout_marginTop="80dip"
        android:gravity="center"
        android:text="@string/att"
        android:textSize="@dimen/body" />

    <Button
        android:id="@+id/verizon"
        android:layout_width="@dimen/resultw"
        android:layout_height="@dimen/resulth"
        android:layout_gravity="center"
        android:layout_marginTop="8dip"
        android:gravity="center"
        android:text="@string/verizon"
        android:textSize="@dimen/body" />

    <Button
        android:id="@+id/sprint"
        android:layout_width="@dimen/resultw"
        android:layout_height="@dimen/resulth"
        android:layout_gravity="center"
        android:layout_marginTop="8dip"
        android:gravity="center"
        android:text="@string/sprint"
        android:textSize="@dimen/body" />

    <Button
        android:id="@+id/tmobile"
        android:layout_width="@dimen/resultw"
        android:layout_height="@dimen/resulth"
        android:layout_gravity="center"
        android:layout_marginTop="8dip"
        android:gravity="center"
        android:text="@string/tmobile"
        android:textSize="@dimen/body" />

    <Button
        android:id="@+id/other"
        android:layout_width="@dimen/resultw"
        android:layout_height="@dimen/resulth"
        android:layout_gravity="center"
        android:layout_marginTop="8dip"
        android:gravity="center"
        android:text="@string/other" />

</LinearLayout>