<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:orientation="vertical"
    android:paddingTop="10dip" >

    <TextView
        android:id="@+id/contract_plans"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/contract_plans"
        android:text="@string/contract_plans"
        android:textColor="@color/titlenoback"
        android:textSize="@dimen/title_dimens" />

    <TextView
        android:id="@+id/att_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="35dip"
        android:gravity="center"
        android:hint="@string/att_total"
        android:textColor="@color/titlenoback"
        android:textSize="@dimen/breakdown_dimens" />

    <TextView
        android:id="@+id/ver_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:hint="@string/ver_total"
        android:textColor="@color/titlenoback"
        android:textSize="@dimen/breakdown_dimens" />

    <TextView
        android:id="@+id/spr_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:hint="@string/spr_total"
        android:textColor="@color/titlenoback"
        android:textSize="@dimen/breakdown_dimens" />
    
        <TextView
        android:id="@+id/tmo_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dip"
        android:gravity="center"
        android:hint="@string/tmo_total"
        android:textColor="@color/titlenoback"
        android:textSize="@dimen/breakdown_dimens" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:paddingBottom="20dip"
        android:paddingTop="10dip" >

        <TextView
            android:id="@+id/breakdown_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dip"
            android:gravity="right"
            android:text="@string/breakdown_send"
            android:textColor="@color/titlenoback"
            android:textSize="@dimen/title_dimens" />
    </LinearLayout>

</LinearLayout>