<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/homeprofile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dip" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/yourProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/yourProfile"
            android:text="@string/yourProfile"
            android:textColor="@color/titlenoback"
            android:textSize="@dimen/title_dimens" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/table"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:background="@drawable/splashborder"
        android:clickable="true"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/yourcarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/yourcarrier"
            android:padding="10dp"
            android:text="@string/yourcarrier"
            android:textColor="@color/white_color"
            android:textSize="@dimen/subtitle_dimens" />

        <TextView
            android:id="@+id/numsmartphones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/numsmartphones"
            android:padding="10dp"
            android:text="@string/numsmartphones"
            android:textColor="@color/white_color"
            android:textSize="@dimen/subtitle_dimens" />

        <TextView
            android:id="@+id/numbasicphones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/numbasicphones"
            android:padding="10dp"
            android:text="@string/numbasicphones"
            android:textColor="@color/white_color"
            android:textSize="@dimen/subtitle_dimens" />

        <TextView
            android:id="@+id/gigsofdata"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/gigsofdata"
            android:padding="10dp"
            android:text="@string/gigsofdata"
            android:textColor="@color/white_color"
            android:textSize="@dimen/subtitle_dimens" />

        <TextView
            android:id="@+id/monthlybill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:hint="@string/monthlypayment"
            android:padding="10dp"
            android:text="@string/monthlypayment"
            android:textColor="@color/white_color"
            android:textSize="@dimen/subtitle_dimens" />
    </LinearLayout>

    <TextView
        android:id="@+id/editprofile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/editprofile"
        android:layout_marginTop="30dp"
        android:text="@string/editprofile"
        android:textColor="@color/blue"
        android:textSize="@dimen/subtitle_dimens"
        android:clickable="true" />

</LinearLayout>